<resources>
    <string name="app_name">Gatherme</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sing_in">Sign in</string>
    <string name="sing_up">Sign up</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="age">Age</string>
    <string name="emptyField">The Field cannot be empty</string>
    <string name="notEmail">It is not an email</string>
    <string name="emailNotFound">Email not Found</string>
    <string name="passwordError">Password incorrect</string>
    <string name="emailOrPasswordError">Error: email or password</string>
    <string name="emailIsTaken">That email is already taken</string>
    <string name="usernameIsTaken">That username is already taken</string>
    <string name="welcome">Welcome</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="descriptionSubTitle">Tell us about yourself</string>
    <string name="sing_out">Sing out</string>
    <string name="data_update">Data update satisfactorily</string>
    <string name="user_toast_register">user has been registered</string>
    <string name="toast_error_data">Error getting user data</string>
    <string name="bottom_menu_profile">Profile</string>
    <string name="bottom_menu_tinder">Meet peopleTinder</string>
    <string name="bottom_menu_home">Home</string>
    <string name="select_image">Select Image</string>
    <string name="pick_image_ins">Click on the profile image to open the gallery and select a image</string>
    <string name="alert">Alert</string>
    <string name="permissions_storage">App Needs Access to the Storage</string>
    <string name="dont_allow">DON\'T ALLOW</string>
    <string name="settings">SETTINGS</string>
    <string name="category">Category</string>
    <string name="academic">Academic</string>
    <string name="sport">Sport</string>
    <string name="games">Games</string>
    <string name="culture">Culture</string>
    <string name="food">Food</string>
    <string name="party">Party</string>
    <string name="others">Others</string>
    <string name="all">All</string>
</resources>
